css: Style navbar and header sections

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -3,64 +3,233 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 /* Set every element's box-sizing to border-box */
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-html, body {
-    height: 100%;
-    font-family: 'Titillium Web', sans-serif;
+html,
+body {
+  height: 100%;
+  font-family: "Titillium Web", sans-serif;
 }
 
-h1, h2, h3, h4, h5 {
-    font-family: 'Bangers', cursive;
-    letter-spacing: 1px;
-    margin-bottom: 15px;
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Bangers", cursive;
+  letter-spacing: 1px;
+  margin-bottom: 15px;
 }
 
 /* Your code starts here! */
+/* NavBar */
+.nav-bar {
+  width: 100%;
+  height: 80px;
+}
+
+.nav-bar .nav-menu {
+  display: inline-block;
+  width: 70%;
+
+  height: 100%;
+  color: rgb(204, 204, 204);
+}
+.nav-bar .nav-menu li {
+  display: inline-block;
+  height: 100%;
+  margin-right: -4px;
+}
+.nav-bar .nav-menu li a {
+  text-decoration: none;
+  color: #c0c0c0;
+  display: block;
+  padding: 30px 55px;
+  margin: 0px;
+  height: 100%;
+}
+
+.nav-bar .logo-div {
+  width: 30%;
+  display: inline-block;
+}
+.nav-bar .logo-div .logo {
+  display: block;
+  margin: 0px auto;
+  height: 100%;
+}
+
+/* Main */
+main {
+  margin: 0px 5em;
+}
+
+/* HEADER */
+
+.main-header {
+  height: 450px;
+  width: 100%;
+  border-bottom: 1px solid gray;
+  padding-bottom: 70px;
+}
+.main-header .intro {
+  display: inline-block;
+  width: 50%;
+  height: 100%;
+}
+
+.main-header .intro span {
+  display: block;
+}
+
+.main-header .intro .intro-text {
+  font-size: 5em;
+  font-family: "Bangers", cursive;
+  text-align: center;
+  padding-left: 30px;
+}
+
+.main-header .intro-image-div {
+  display: inline-block;
+  width: 50%;
+  text-align: center;
+  padding: 30px;
+}
+
+.main-header .intro-btn {
+  padding: 10px 30px;
+  width: 180px;
+  text-align: center;
+  margin-left: calc(50% - 90px);
+  margin-top: 10px;
+  background: transparent;
+  border: 1px solid gray;
+}
